add JUnit test.